# project-pragma

./: CMakeLists.txt  Makefile  Makefile.simple  pragma_node.cpp  readme.md  simple_demo.cpp  test_blockchain.sh
src/: main.cpp  main_simple.cpp  rpc_server.cpp  wallet_cli.cpp  wallet_debug.cpp  wallet_rpc_test.cpp
src/core/: block.cpp  block.h  chainstate.cpp  chainstate.h  difficulty.cpp  difficulty.h  mempool.cpp  mempool.h  merkle.cpp  merkle.h  retargeting.cpp  retargeting.h  synchronized_blockchain.cpp  synchronized_blockchain.h  transaction.cpp  transaction.h  types.h  utxo.cpp  utxo.h  validator.cpp  validator.h
src/network/: p2p.cpp  p2p.h  p2p_simple.h  p2p_test.cpp  p2p_test.h  peer.cpp  peer.h  protocol.cpp  protocol.h  protocol_corrected.h  protocol_fixed.cpp  protocol_old.h
src/primitives/: hash.cpp  hash.h  serialize.cpp  serialize.h  utils.cpp  utils.h
src/rpc/: cli.cpp  rpc.cpp  rpc.h  synchronized_rpc.h
src/wallet/: wallet.cpp  wallet.h  wallet_manager.h
tests/: CMakeLists.txt  test_block.cpp  test_chainstate.cpp  test_difficulty.cpp  test_hash.cpp  test_merkle.cpp  test_serialize.cpp  test_transaction.cpp  test_utils.cpp  test_utxo.cpp  test_validator.cpp
